# routes/index.js
@@ -1,5 +1,5 @@
 const express = require("express");
 const router = express.Router();
 router.use("/", require("./swagger"));
-router.use("/contacts", require("./contacts"));
+router.use("/vehicles", require("./vehicles"));
 module.exports = router;
